Updated ratings model by adding the participation, effort and punctuality fields, applied these changes to the views including home, feedback and teams. Also updated the forms and the controllers accordingly.

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -9,8 +9,18 @@
 </p>
 
 <p>
-  <strong>Rating:</strong>
-  <%= @feedback.rating %>
+  <strong>Participation Rating:</strong>
+  <%= @feedback.participation_rating %>
+</p>
+
+<p>
+  <strong>Effort Rating:</strong>
+  <%= @feedback.effort_rating %>
+</p>
+
+<p>
+  <strong>Punctuality Rating:</strong>
+  <%= @feedback.punctuality_rating %>
 </p>
 
 <p>
