--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -5,7 +5,9 @@
     <tr>
       <th>Student Name</th>
       <th>Team</th>
-      <th>Rating</th>
+      <th>Participation Rating</th>
+      <th>Effort Rating</th>
+      <th>Punctuality Rating</th>
       <th>Priority</th>
       <th>Comments</th>
       <th>Timestamp</th>
@@ -18,7 +20,9 @@
       <tr>
         <td><%= feedback.user.name %></td>
         <td><%= feedback.team.team_name %></td>
-        <td><%= feedback.rating %></td>
+        <td><%= feedback.participation_rating %></td>
+        <td><%= feedback.effort_rating %></td>
+        <td><%= feedback.punctuality_rating %></td>
         <%if feedback.priority == 2%>
           <td><%='Low'%></td>
         <%elsif feedback.priority == 1%>
