change feedback rating from 1-10 to 1-5

--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -29,7 +29,7 @@
   </div> 
 
   <div class="field">
-    <% choices = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10] %>
+    <% choices = [1, 2, 3, 4, 5] %>
     <%= form.label :rating %>
     <%= form.select :rating, choices, :include_blank => true %>
   </div>
