Fixed student homepage, moved team name and team members to top of page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,9 @@
-<h1>Welcome, <%=@current_user.name%></h1>
+<h1>Welcome, <%=@current_user.name%>!</h1>
+<% @teams.each do |team| %>
+  <h3><%='Team: ' + team.team_name%></h3>
+  <h3><%='Team Members: ' + team.student_names.join(", ") %></h3>
+<% end %>
+</br>
 
 <% if is_admin? %>
   <br>
@@ -123,7 +128,6 @@
     <% if current_user.teams.size == 0 %>
       <p>No teams yet!</p>
     <% else %>
-      <br>
       <h2>Team Summary View</h2>
       </br>
       <h2>Current Week: <%= @week_range[:start_date].strftime('%b %e, %Y')%> to <%= @week_range[:end_date].strftime('%b %e, %Y')%></h2>
@@ -133,11 +137,11 @@
           <tr>
             <th></th>
             <th>Urgency/Intervention Level</th>
-            <th>Ind. Participation Rating (Out of 10)</th>
-            <th>Ind. Effort Rating (Out of 10)</th>
-            <th>Ind. Punctuality Rating (Out of 10)</th>
-            <th>Team Name</th>
-            <th>Team Members</th>
+            <th>Participation Rating (Out of 10) </th>
+            <th>Effort Rating (Out of 10) </th>
+            <th>Punctuality Rating (Out of 10) </th>
+            <%# <th>Team Name</th> 
+            <th>Team Members</th> %> 
             <th colspan="4"></th>
           </tr>
         </thead>
@@ -145,19 +149,23 @@
         <tbody>
           <% @current_user.teams.each do |team| %>
             <tr id=<%= team.id %>>
+
               <td id=<%= team.id %>-status>
                 <span class=<%= 'dot-' + team.status(@week_range[:start_date], @week_range[:end_date]) %>></span>
               </td>
+
               <% priority = team.find_priority_weighted(@week_range[:start_date], @week_range[:end_date]) %>
               <td><%= priority ? priority : "No feedback" %></td>
+
               <% average_participation_rating = Team.feedback_average_participation_rating(team.feedbacks.where(timestamp: @week_range[:start_date]..@week_range[:end_date])) %>
               <td><%= average_participation_rating ? average_participation_rating : "No feedback" %></td>
+
               <% average_effort_rating = Team.feedback_average_effort_rating(team.feedbacks.where(timestamp: @week_range[:start_date]..@week_range[:end_date])) %>
               <td><%= average_effort_rating ? average_effort_rating : "No feedback" %></td>
+
               <% average_punctuality_rating = Team.feedback_average_punctuality_rating(team.feedbacks.where(timestamp: @week_range[:start_date]..@week_range[:end_date])) %>
               <td><%= average_punctuality_rating ? average_punctuality_rating : "No feedback" %></td>
-              <td><%= team.team_name %></td>
-              <td><%= team.student_names.join(", ") %></td>
+
               <%if team.feedbacks.size > 0%>
                 <td><%= link_to "View Historical Data", team %></td>
               <% else %>
