feat(Indivdiual Priority): Calculated individual priority based on ratings now from the backend * Removed ability for user to input their own priority level * Moved average ratings calculation from Feedback model to Team model * Created function to convert the number priority to word version

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -23,13 +23,7 @@
         <td><%= feedback.participation_rating %></td>
         <td><%= feedback.effort_rating %></td>
         <td><%= feedback.punctuality_rating %></td>
-        <%if feedback.priority == 2%>
-          <td><%='Low'%></td>
-        <%elsif feedback.priority == 1%>
-          <td><%='Medium'%></td>
-        <%else%>
-          <td><%='Urgent'%></td>
-        <%end%>
+        <td><%= feedback.get_priority_word %></td>
         <%if feedback.comments.size == 0%>
           <td>Students Has Not Submitted Comments!</td>
         <%else%>
