--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -209,27 +209,26 @@ li.dropdown {
   vertical-align: middle;
 }
 
-.dot-red {
+.dot {
   height: 25px;
   width: 25px;
   border-radius: 50%;
   display: inline-block;
+}
+
+.red {
   background-color: rgb(153, 0, 0);
 }
 
-.dot-yellow {
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  display: inline-block;
+.blue {
+  background-color: rgb(8, 123, 255);
+}
+
+.yellow {
   background-color: rgb(255, 204, 0);
 }
 
-.dot-green {
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  display: inline-block;
+.green {
   background-color: rgb(0, 153, 51);
 }
 
