Edit button for Feedback now works

--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form', feedback: @feedback, user: @feedback.user, flag: true %>
 
 <%= link_to 'Show', @feedback %> |
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back %>   |
+<%= link_to 'Home', '/' %>
