--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -34,4 +34,6 @@
 </p>
 
 <%= link_to 'Edit', edit_feedback_path(@feedback) %> |
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back %>   |
+<%= link_to 'Home', '/' %>
+
