fix(Header): Corrected header name to be 'Student Name' as it was before

--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th><%= sortable "name" %></th>
+      <th><%= sortable "name", "Student Name" %></th>
       <th><%= sortable "team_name", "Team" %></th>
       <th><%= sortable "participation_rating" %></th>
       <th><%= sortable "effort_rating" %></th>
